--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.username=likelion
 spring.datasource.password=1234
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+# Hibernate ?? ?? ??
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
