--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/likelion?useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&serverTimezone=Asia/Seoul
-spring.datasource.username=likelion
+spring.datasource.username=backend
 spring.datasource.password=1234
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
